// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextualBadge component rendering it should render according to theme: ContextualBadge Custom Theme 1`] = `
<span
  className="sc-AxjAm elbZYi"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 1`] = `
<span
  className="sc-AxjAm elbZYi"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 2`] = `
<span
  className="sc-AxjAm cROGRu"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 3`] = `
<span
  className="sc-AxjAm bjKedP"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 4`] = `
<span
  className="sc-AxjAm iMhNmJ"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 5`] = `
<span
  className="sc-AxjAm lfhpfW"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 6`] = `
<span
  className="sc-AxjAm fZbcmC"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 7`] = `
<span
  className="sc-AxjAm kKqBgo"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each color: ContextualBadge Colors 8`] = `
<span
  className="sc-AxjAm cXbbuw"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render each type: ContextualBadge Types 1`] = `
<span
  className="sc-AxjAm elbZYi"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;

exports[`ContextualBadge component rendering it should render the default color and default type: ContextualBadge Default Color And Type 1`] = `
<span
  className="sc-AxjAm elbZYi"
  data-type="standard"
  fontFamily="\\"Roboto\\", sans-serif"
  fontSize={12}
  fontWeight={400}
>
  Mock
</span>
`;
